@@ -1,2 +1,2 @@
-@java -server -XX:MetaspaceSize=256m -XX:MaxMetaspaceSize=256m -Xms1024m -Xmx1024m -XX:NewRatio=2 -XX:SurvivorRatio=8 -jar l1jserver.jar
+@java -XX:PermSize=256m -XX:MaxPermSize=256m -Xms1024m -Xmx1024m -jar l1jserver.jar
 @pause
